--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,8 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.0.0'
 
     implementation 'com.borjabravo:readmoretextview:2.1.0'
+    implementation 'com.github.TheHasnatBD:SweetToast:1.0.1'
+
 
 }
 
